# agentic-rag

./: .env.template  README.md  agent.ipynb  environment.yml  pdf_processor.py  pyproject.toml
vector_store/: index.faiss  index.pkl
